@@ -67,6 +67,11 @@ class JackClientChannelInterface
         virtual void Stop()
         {}
 		
+		virtual int ServerCheck(const char* server_name)
+        {
+			return -1;
+		}
+		
 		virtual void ClientCheck(const char* name, char* name_res, int options, int* status, int* result)
         {}
         virtual void ClientOpen(const char* name, int* shared_engine, int* shared_client, int* shared_graph, int* result)
