@@ -53,7 +53,9 @@ class JackMachClientChannel : public JackClientChannelInterface, public JackRunn
 
         int Start();
         void Stop();
-
+		
+		int ServerCheck(const char* server_name);
+    
         void ClientCheck(const char* name, char* name_res, int options, int* status, int* result);
 		void ClientOpen(const char* name, int* shared_engine, int* shared_client, int* shared_graph, int* result);
         void ClientClose(int refnum, int* result);
