@@ -4,6 +4,10 @@
 
 2007-08-21 Stephane Letz  <letz@grame.fr>
 
+	* Automatic server launch.
+
+2007-08-20 Stephane Letz  <letz@grame.fr>
+
 	* Add "systemic" latencies management in CoreAudio driver.
 
 2007-08-16 Stephane Letz  <letz@grame.fr>
